--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MEERA DEMO</title>
+    <title>SBC.com</title>
     <link rel="icon" type="image/x-icon" href="/logo/SBC.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -16,13 +16,13 @@
 </head>
 
 <body>
-    <div class="bg-light p-2">
-        <p class="m-0 text-dark text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry
+    <!-- <div class="bg-light p-2">
+        <p class="m-0 text-dark text-center">Agriculture Becomes Easy
         </p>
-    </div>
+    </div> -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Company Name</a>
+            <a class="navbar-brand" href="#">SBC</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="abou.html">About Us</a>
@@ -38,7 +38,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="info.html">Other Information</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Link
@@ -51,14 +51,13 @@
                             </li>
                             <li><a class="dropdown-item" href="info.html">INFO 3</a></li>
                         </ul>
-                    </li>
+                    </li> -->
                 </ul>
                 <a class="btn btn-danger rounded-0" href="contact.html">Contact US</a>
             </div>
         </div>
     </nav>
-
-    <section id="sliding-area">
+    <!-- <section id="sliding-area">
         <div class="">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
@@ -104,22 +103,14 @@
                 </button>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section id="cards">
         <div class="container my-5 p-5">
             <div class="">
-                <p class="fs-1 fw-bold text-center">Head Line</p>
-                <p class="fs-4 text-mute text-center">Sub Line</p>
+                <p class="fs-1 fw-bold text-center">Thanks For Visiting Us</p>
 
-                <p class="lead text-justify mb-5">It is a long established fact that a reader will be distracted by the
-                    readable content
-                    of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
-                    normal distribution of letters, as opposed to using 'Content here, content here', making it look
-                    like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as
-                    their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their
-                    infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose
-                    (injected humour and the like).</p>
+                <p class="lead text-justify mb-5">Thanks to everyone who has supported us for 12 years since we founded. More than 12 years have passed since we opened a small operating office in Dhaka, Bangladesh in 2010. At the beginning we were mainly dealing with seeds. Now we are actively involved in other agricultural inputs & production business.</p>
             </div>
         </div>
 
@@ -176,26 +167,26 @@
                         <div class="container">
                             <h1 class="mb-5">Necessary Links</h1>
                             <div class="row align-items-center">
-                                <div class="col-md-3 d-flex flex-column justify-content-between text-white">
+                                <div class="col-md-6 d-flex flex-column justify-content-between text-white">
                                     <a href="abou.html" class="text-white text-decoration-none">About Us</a><br>
-                                    <a href="info.html" class="text-white text-decoration-none">Mission And
-                                        Vision</a><br>
+                                    <a href="info.html" class="text-white text-decoration-none">Informations</a><br>
                                     <a href="contact.html" class="text-white text-decoration-none">Contact Us</a><br>
                                 </div>
-                                <div class="col-md-3 d-flex flex-column justify-content-between">
+                                <!-- <div class="col-md-3 d-flex flex-column justify-content-between">
                                     <a href="" class="text-white text-decoration-none">LINKS</a><br>
                                     <a href="" class="text-white text-decoration-none">LINKS</a><br>
                                 </div>
                                 <div class="col-md-3 d-flex flex-column justify-content-between">
                                     <a href="" class="text-white text-decoration-none">LINKS</a><br>
                                     <a href="" class="text-white text-decoration-none">LINKS</a><br>
-                                </div>
+                                </div> -->
 
-                                <div class="col-md-3">
-                                    <p class="m-0"><i class="bi bi-building"></i> Office: Office Address</p>
-                                    <p class="m-0"><i class="bi bi-phone"></i> Phone: +88</p>
-                                    <p class="m-0"><i class="bi bi-whatsapp"></i> Phone: +88</p>
-                                    <p class="m-0"><i class="bi bi-envelope"></i> email: info@email.com</p>
+                                <div class="col-md-6 text-end">                                    
+                                    <p class="m-0"><i class="bi bi-building"></i> Office: 4th Floor, Building No. 2, <br> 6 Natak Sarani, Ramna, <br> Dhaka-1000, Bangladesh
+                                    </p>
+                                    <p class="m-0"><i class="bi bi-phone"></i> Phone: +880 2-41031883</p>
+                                    <!-- <p class="m-0"><i class="bi bi-whatsapp"></i> Phone: +88</p> -->
+                                    <p class="m-0"><i class="bi bi-envelope"></i> email: connect@sbc.com.bd</p>
                                 </div>
                             </div>
                             <p class="my-2 text-white text-center">Copyright @ 2022</p>
