--- a/about_meera.html
+++ b/about_meera.html
@@ -130,7 +130,7 @@
 
                 </div>
                 <div class="col-md-6 col-lg-6 col-sm-6">
-                    <img src="/images/decor.jpg" class="img-thumbnail b-0 rounded-0" alt="">
+                    <img src="/assets/img/sbc/about1.png" class="img-thumbnail b-0 rounded-0" alt="">
                 </div>
             </div>
             <div class="row">
@@ -143,7 +143,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 col-sm-6 order-1">
-                    <img src="/images/art.jpg" class="img-thumbnail b-0 rounded-0" alt="">
+                    <img src="/assets/img/sbc/about2.png" class="img-thumbnail b-0 rounded-0" alt="">
                 </div>
             </div>
         </div>
