--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MEERA DEMO</title>
+    <title>SBC.com</title>
     <link rel="icon" type="image/x-icon" href="/logo/SBC.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -16,9 +16,9 @@
 </head>
 
 <body>
-    <div class="bg-light p-2">
+    <!-- <div class="bg-light p-2">
         <p class="m-0 text-dark text-center">Agriculture Becomes Easy</p>
-    </div>
+    </div> -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">SBC</a>
@@ -37,7 +37,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="info.html">Other Information</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Link
@@ -50,7 +50,7 @@
                             </li>
                             <li><a class="dropdown-item" href="info.html">INFO 3</a></li>
                         </ul>
-                    </li>
+                    </li> -->
                 </ul>
                 <a class="btn btn-danger rounded-0" href="contact.html">Contact US</a>
             </div>
@@ -70,24 +70,30 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item h-img active">
-                        <img src="images/1.jpg" class="d-block w-100 h-img" alt="...">
+                        <div class="carousel-img">
+                            <img src="/assets/img/sbc/slider1.png" class="d-block w-100 h-70" alt="...">
+                        </div>                        
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                            <h3 class="fw-bold fs-1">Welcome</h3>
+                            <p class="">To SBC.com</p>
                         </div>
                     </div>
                     <div class="carousel-item h-img">
-                        <img src="images/2.jpg" class="d-block w-100 h-70" alt="...">
+                        <div class="carousel-img">
+                            <img src="/assets/img/sbc/slider2.png" class="d-block w-100 h-70" alt="...">
+                        </div>  
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
+                            <h3 class="fw-bold fs-1">We Provide</h3>
+                            <p>Best Ingredients For farmers</p>
                         </div>
                     </div>
                     <div class="carousel-item h-img">
-                        <img src="images/3.jpg" class="d-block w-100 h-70" alt="...">
+                        <div class="carousel-img">
+                            <img src="/assets/img/sbc/slider3.png" class="d-block w-100 h-70" alt="...">
+                        </div>  
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
+                            <h3 class="fw-bold fs-1">We Ensure</h3>
+                            <p>Pure And Fine seeds are provided</p>
                         </div>
                     </div>
                 </div>
@@ -109,7 +115,6 @@
         <div class="container my-5 p-5">
             <div class="">
                 <p class="fs-1 fw-bold text-center">Welcome to SBC</p>
-                <p class="fs-4 text-mute text-center">Sub Line</p>
 
                 <p class="lead text-justify mb-5">Thanks to everyone who has supported us for 12 years since we founded. More than 12 years have passed since we opened a small operating office in Dhaka, Bangladesh in 2010. At the beginning we were mainly dealing with seeds. Now we are actively involved in other agricultural inputs & production business. </p>
             </div>
@@ -184,7 +189,7 @@
                 <div class="artist-background">
                     <div class="overlay mb-2 px-5 py-5 text-light d-flex align-self-center">
                         <div class="row align-items-center">
-                            <div class="col-md-5 d-flex flex-column justify-content-between">
+                            <div class="col-md-12 d-flex flex-column justify-content-between">
                                 <h1 class="mb-5">Background</h1>
                                 <p class="mb-5">As a business founded by family, we understand the importance of an unconditional customer service. We believe in long term relationships with our clients. The people of MAI do what they say and say what they do. Being nationally active for long, we know our way around the country. We literally feel at home at every corner of this land.</p>
                                 <p class="mb-5">Commencing in 2006, we have been involved in Agricultural Commodity trade largely with Rice & Maize. In 2008 Natural Compost, Jute sacks have been added to the portfolio. In the year 2010 we engaged ourselves in sourcing and sales of Horticultural & Agricultural seeds. In 2014 we started to source & sales of mulching materials & yellow straps. We are one of the pioneers to introduce mulching & packed coco-substrate in Bangladesh. </p>
@@ -205,25 +210,26 @@
                         <div class="container">
                             <h1 class="mb-5">Necessary Links</h1>
                             <div class="row align-items-center">
-                                <div class="col-md-3 d-flex flex-column justify-content-between text-white">
+                                <div class="col-md-6 d-flex flex-column justify-content-between text-white">
                                     <a href="abou.html" class="text-white text-decoration-none">About Us</a><br>
-                                    <a href="info.html" class="text-white text-decoration-none">Mission And Vision</a><br>
+                                    <a href="info.html" class="text-white text-decoration-none">Informations</a><br>
                                     <a href="contact.html" class="text-white text-decoration-none">Contact Us</a><br>
                                 </div>
-                                <div class="col-md-3 d-flex flex-column justify-content-between">
+                                <!-- <div class="col-md-3 d-flex flex-column justify-content-between">
                                     <a href="" class="text-white text-decoration-none">LINKS</a><br>
                                     <a href="" class="text-white text-decoration-none">LINKS</a><br>
                                 </div>
                                 <div class="col-md-3 d-flex flex-column justify-content-between">
                                     <a href="" class="text-white text-decoration-none">LINKS</a><br>
                                     <a href="" class="text-white text-decoration-none">LINKS</a><br>
-                                </div>
+                                </div> -->
 
-                                <div class="col-md-3">
-                                    <p class="m-0"><i class="bi bi-building"></i> Office: Office Address</p>
-                                    <p class="m-0"><i class="bi bi-phone"></i> Phone: +88</p>
-                                    <p class="m-0"><i class="bi bi-whatsapp"></i> Phone: +88</p>
-                                    <p class="m-0"><i class="bi bi-envelope"></i> email: info@email.com</p>
+                                <div class="col-md-6 text-end">                                    
+                                    <p class="m-0"><i class="bi bi-building"></i> Office: 4th Floor, Building No. 2, <br> 6 Natak Sarani, Ramna, <br> Dhaka-1000, Bangladesh
+                                    </p>
+                                    <p class="m-0"><i class="bi bi-phone"></i> Phone: +880 2-41031883</p>
+                                    <!-- <p class="m-0"><i class="bi bi-whatsapp"></i> Phone: +88</p> -->
+                                    <p class="m-0"><i class="bi bi-envelope"></i> email: connect@sbc.com.bd</p>
                                 </div>
                             </div>
                             <p class="my-2 text-white text-center">Copyright @ 2022</p>
