--- a/info.html
+++ b/info.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MEERA DEMO</title>
+    <title>SBC.com</title>
     <link rel="icon" type="image/x-icon" href="/logo/SBC.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -16,13 +16,13 @@
 </head>
 
 <body>
-    <div class="bg-light p-2">
+    <!-- <div class="bg-light p-2">
         <p class="m-0 text-dark text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry
         </p>
-    </div>
+    </div> -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Company Name</a>
+            <a class="navbar-brand" href="#">SBC</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -30,15 +30,15 @@
             <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="abou.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="info.html">Other Information</a>
+                        <a class="nav-link active" href="info.html">Other Information</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Link
@@ -51,7 +51,7 @@
                             </li>
                             <li><a class="dropdown-item" href="info.html">INFO 3</a></li>
                         </ul>
-                    </li>
+                    </li> -->
                 </ul>
                 <a class="btn btn-danger rounded-0" href="contact.html">Contact US</a>
             </div>
@@ -141,11 +141,6 @@
                     <div class="overlay mb-2 px-5 py-5 text-light d-flex align-self-center">
                         <div class="row align-items-center">
                             <div class="col-md-5 d-flex flex-column justify-content-between">
-                                <h1 class="mb-5">Some Headline</h1>
-                                <p class="mb-5">Empower creativity around the world. We are an open marketplace for
-                                    independent artists to upload and enable their work on a wide array of wall art,
-                                    home decor, lifestyle products and more.</p>
-                                <a href="" class="text-white">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -219,25 +214,26 @@
                         <div class="container">
                             <h1 class="mb-5">Necessary Links</h1>
                             <div class="row align-items-center">
-                                <div class="col-md-3 d-flex flex-column justify-content-between text-white">
+                                <div class="col-md-6 d-flex flex-column justify-content-between text-white">
                                     <a href="abou.html" class="text-white text-decoration-none">About Us</a><br>
-                                    <a href="info.html" class="text-white text-decoration-none">Mission And Vision</a><br>
+                                    <a href="info.html" class="text-white text-decoration-none">Informations</a><br>
                                     <a href="contact.html" class="text-white text-decoration-none">Contact Us</a><br>
                                 </div>
-                                <div class="col-md-3 d-flex flex-column justify-content-between">
+                                <!-- <div class="col-md-3 d-flex flex-column justify-content-between">
                                     <a href="" class="text-white text-decoration-none">LINKS</a><br>
                                     <a href="" class="text-white text-decoration-none">LINKS</a><br>
                                 </div>
                                 <div class="col-md-3 d-flex flex-column justify-content-between">
                                     <a href="" class="text-white text-decoration-none">LINKS</a><br>
                                     <a href="" class="text-white text-decoration-none">LINKS</a><br>
-                                </div>
+                                </div> -->
 
-                                <div class="col-md-3">
-                                    <p class="m-0"><i class="bi bi-building"></i> Office: Office Address</p>
-                                    <p class="m-0"><i class="bi bi-phone"></i> Phone: +88</p>
-                                    <p class="m-0"><i class="bi bi-whatsapp"></i> Phone: +88</p>
-                                    <p class="m-0"><i class="bi bi-envelope"></i> email: info@email.com</p>
+                                <div class="col-md-6 text-end">                                    
+                                    <p class="m-0"><i class="bi bi-building"></i> Office: 4th Floor, Building No. 2, <br> 6 Natak Sarani, Ramna, <br> Dhaka-1000, Bangladesh
+                                    </p>
+                                    <p class="m-0"><i class="bi bi-phone"></i> Phone: +880 2-41031883</p>
+                                    <!-- <p class="m-0"><i class="bi bi-whatsapp"></i> Phone: +88</p> -->
+                                    <p class="m-0"><i class="bi bi-envelope"></i> email: connect@sbc.com.bd</p>
                                 </div>
                             </div>
                             <p class="my-2 text-white text-center">Copyright @ 2022</p>
@@ -248,6 +244,7 @@
             </div>
         </div>
     </section>
+
 
 
 
