--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SBC.com</title>
-    <link rel="icon" type="image/x-icon" href="/logo/SBC.png">
+    <title>meeraseed</title>
+    <link rel="icon" type="image/x-icon" href="/logo/MEERA.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
@@ -21,7 +21,7 @@
     </div> -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">SBC</a>
+            <a class="navbar-brand" href="#">meeraseed</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -29,14 +29,14 @@
             <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="abou.html">About Us</a>
+                        <a class="nav-link" href="about.html">About Us</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="info.html">Other Information</a>
-                    </li>
+                    </li> -->
                     <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -114,9 +114,9 @@
     <section id="cards">
         <div class="container my-5 p-5">
             <div class="">
-                <p class="fs-1 fw-bold text-center">Welcome to SBC</p>
+                <p class="fs-1 fw-bold text-center">Welcome to Meeraseed</p>
 
-                <p class="lead text-justify mb-5">Thanks to everyone who has supported us for 12 years since we founded. More than 12 years have passed since we opened a small operating office in Dhaka, Bangladesh in 2010. At the beginning we were mainly dealing with seeds. Now we are actively involved in other agricultural inputs & production business. </p>
+                <p class="lead text-justify mb-5">Thanks to everyone who has supported us for 12 years since we founded. More than 12 years have passed since we opened a small operating office in Dhaka, Bangladesh in 2010.</p>
             </div>
             <div class="slide-cards">
                 <div class="rounded-0">
@@ -191,8 +191,10 @@
                         <div class="row align-items-center">
                             <div class="col-md-12 d-flex flex-column justify-content-between">
                                 <h1 class="mb-5">Background</h1>
-                                <p class="mb-5">As a business founded by family, we understand the importance of an unconditional customer service. We believe in long term relationships with our clients. The people of MAI do what they say and say what they do. Being nationally active for long, we know our way around the country. We literally feel at home at every corner of this land.</p>
-                                <p class="mb-5">Commencing in 2006, we have been involved in Agricultural Commodity trade largely with Rice & Maize. In 2008 Natural Compost, Jute sacks have been added to the portfolio. In the year 2010 we engaged ourselves in sourcing and sales of Horticultural & Agricultural seeds. In 2014 we started to source & sales of mulching materials & yellow straps. We are one of the pioneers to introduce mulching & packed coco-substrate in Bangladesh. </p>
+                                <p class="mb-2">We strongly believe that perfect match between high quality seeds and a local growing condition is what makes crops prosper. Creating that perfect match, together with our clients, is what we have specialized in for over the years.</p>
+                                <p class="mb-2">We started as family business focused on high quality vegetable seeds that are well adapted for use in tropical conditions. MEERA is our premium brand for a broad range of top quality vegetable seeds that are specially chosen for our farmers. The quality of our seeds is what makes us stand out in the top place.</p>
+                                <p class="mb-2">We test and screen our seeds at different trial locations of the country to ascertain their satisfactory performance under specific growing conditions.</p>
+                                <p class="mb-2">As a business founded by family, we understand the importance of an unconditional customer service. We believe in long term relationships with our clients. The people of MEERA do what they say and say what they do. Being nationally active for long, we know our way around the country. We literally feel at home at every corner of this land.</p>
                                 <a href="" class="text-white">Learn More</a>
                             </div>
                         </div>
