--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </div>                        
                         <div class="carousel-caption d-none d-md-block">
                             <h3 class="fw-bold fs-1">Welcome</h3>
-                            <p class="">To SBC.com</p>
+                            <p class="">To meeraseed</p>
                         </div>
                     </div>
                     <div class="carousel-item h-img">
