--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item h-img active">
                         <div class="carousel-img">
-                            <img src="/assets/img/sbc/slider1.png" class="d-block w-100 h-70" alt="...">
+                            <img src="/assets/img/sbc/about.png" class="d-block w-100 h-70" alt="...">
                         </div>                        
                         <div class="carousel-caption d-none d-md-block">
                             <h3 class="fw-bold fs-1">Welcome</h3>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="carousel-item h-img">
                         <div class="carousel-img">
-                            <img src="/assets/img/sbc/slider2.png" class="d-block w-100 h-70" alt="...">
+                            <img src="/assets/img/sbc/about1.png" class="d-block w-100 h-70" alt="...">
                         </div>  
                         <div class="carousel-caption d-none d-md-block">
                             <h3 class="fw-bold fs-1">We Provide</h3>
@@ -89,7 +89,7 @@
                     </div>
                     <div class="carousel-item h-img">
                         <div class="carousel-img">
-                            <img src="/assets/img/sbc/slider3.png" class="d-block w-100 h-70" alt="...">
+                            <img src="/assets/img/sbc/about2.png" class="d-block w-100 h-70" alt="...">
                         </div>  
                         <div class="carousel-caption d-none d-md-block">
                             <h3 class="fw-bold fs-1">We Ensure</h3>
